time bin corrected + alpha correction for the calculation of the excess

--- a/Get_ON_OFF_counts.ipynb
+++ b/Get_ON_OFF_counts.ipynb
@@ -65,7 +65,7 @@
     "    cond_off = []\n",
     "    for position_event, energy_event in zip(observation.events.radec,observation.events.energy):\n",
     "        radius = get_rad_max(energy_event,energy_low,energy_high,rad_max)\n",
-    "        \n",
+    "        # when the position of an event is close enough from the source, it's considered in ON region \n",
     "        cond_on.append( source_pos.separation(position_event) <= radius )\n",
     "        \n",
     "        cond_off1 = off1_pos.separation(position_event) <= radius \n",
@@ -222,7 +222,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_23271/4095781781.py:11: GammapyDeprecationWarning: Use observation.get_pointing_icrs(time) instead\n",
+      "/tmp/ipykernel_28733/4095781781.py:11: GammapyDeprecationWarning: Use observation.get_pointing_icrs(time) instead\n",
       "  pointing_pos = observation.pointing_radec\n",
       "/home/mathilde.croisonnier/.conda/envs/lst-dev2/lib/python3.11/site-packages/astropy/utils/decorators.py:837: GammapyDeprecationWarning: Use observation.pointing or observation.get_pointing_{altaz,icrs} instead\n",
       "  val = self.fget(obj)\n",
@@ -247,7 +247,7 @@
     "    times        = obs.events.time.value\n",
     "    energies     = obs.events.energy.to(u.GeV).value\n",
     "    \n",
-    "    b    = np.append( all_times_ON,times[cond_on] )\n",
+    "    all_times_ON    = np.append( all_times_ON,times[cond_on] )  #############\"\"\" modified here, there was just \"b\" \n",
     "    all_energies_ON = np.append( all_energies_ON, energies[cond_on] )\n",
     "    \n",
     "    all_times_OFF    = np.append( all_times_OFF,times[cond_off] )\n",
